  - Security: passwords in configuration files are now saved as hash values
  - improved design
  - style fixes for Internet Explorer users
  - Unix: allow to set host passwords (RFE 1754069)
  - Unix: allow to generate random passwords for users
  - Samba 3 groups: Samba part is now optional
  - Personal: add object classes person and organizationalPerson for new accounts (RFE 1830033)
  - LAM Pro: added possibility for deskside support to reset passwords at account list page


07.11.2007 2.1.0
  - tabular design for account pages
  - show DN on account pages
  - Samba 3: made Samba account optional
  - Samba 3: manages now terminal server settings
  - fixed bugs:
   -> LAM Pro: UTF-8 characters are invalid displayed on configuration page (1788752)
   -> LAM works again on PHP 5.1.x (1792447)
   -> Quota: managing group quotas does not work (1811728)
   -> Samba 3 domains: lockout users after bad logon attempts must allow 0 - 999 (1814578)


08.08.2007 2.0.0
  - new translations: Chinese (Simplified), Czech and Portuguese
  - usability improvements
  - LDAP accounts including child entries can now be moved
  - group list can show primary members (RFE 1517679 and patch 1722460)
  - more translated example texts (RFE 1702140)
  - inetOrgPerson: now manages homePhone, roomNumber, businessCategory
  - posixAccount: allow to create home directories in file upload (RFE 1665034)
  - account lists: display buttons on top and bottom (RFE 1702136)
  - fixed bugs:
   -> OU editor: help images (1702132)
   -> config editor: extra space (1702269)
   -> fixed some inconsistent help entries (1694863)
   -> user list: refreshing GID translation did not work (1719168)
   -> allow uid as RDN attribute for inetOrgPerson (1740499)
   -> PHP Warning: mcrypt_decrypt(): The IV parameter must be ... (1742543)
   -> uid attribute no longer required for InetOrgPerson (1757215)


28.03.2007 1.3.0
  - improved design
  - user list can now display jpegPhoto attributes