@@ -52,10 +52,15 @@ echo "<h1 align=\"center\">" . _("LAM tests") . "</h1>\n";
 
 echo "<table class=\"userlist\" rules=\"none\">\n";
 
-echo "<tr class=\"userlist\"><td><a href=\"lamdaemonTest.php\">" . _("Lamdaemon test") . "&nbsp;&nbsp;</a></td>";
-echo "<td>" . _("Check if quotas and homedirectories can be managed.") . "</td></tr>";
+echo "<tr class=\"userlist\"><td style=\"padding:10px;\"><a href=\"lamdaemonTest.php\">" . _("Lamdaemon test") . "&nbsp;&nbsp;</a></td>";
+echo "<td style=\"padding:10px;\">" . _("Check if quotas and homedirectories can be managed.") . "</td></tr>";
+
+echo "<tr class=\"userlist\"><td style=\"padding:10px;\"><a href=\"schemaTest.php\">" . _("Schema test") . "&nbsp;&nbsp;</a></td>";
+echo "<td style=\"padding:10px;\">" . _("Check if the LDAP schema fits the requirements of the selected account modules.") . "</td></tr>";
 
 echo "</table>\n";
+
+
 
 echo "</body>\n";
 echo "</html>\n";
